system management and maintainability as well as on performance makes it worth the wait. We have also made some neat additions 
which let's you expose some editing and user preferences to non-cms-users if you like. Very nice for intranets and community sites. 

Thanx to all involved!!

The InfoGlue Team


Abbreviated Changelog from 2.1 Final 
---------------------------------------

New features
- Fixed so structure tree can represent if a page is hidden
- Added new taglib parameters to hide protected childpages
- Added new taglibs which lets you have visible links to content wizard and assgn content
- Enabled a new feature called "content wizard" which lets you crate contents from a component property or from a link on the page.
- Fixed functionality to push system messages through ajax
- A new feature makes it possible to unpublish all versions of a content or a sitenode. Recursively.
- Server-settings - so one can manage all server settings in the tools instead of in property files.
- A user is now able to choose which language should be shown first when clicking on a content.
- A new feature lets you add "Shortcuts" in the mydesktop tool so users can do all their work from there.
- Completed userAccess support as an addition to roles and groups in the ACL
- Added webservices-taglibs for updating and deleting contents, versions and assets etc
- Made it possible to get a content type from it's name
- Added taglib which lets one check if a user has access to a certain sitenode
- Huge performance improvments on large sites after an upgrade of the cache system and the completion of a selective cache eviction
- Added new message center to management tool to which lets administrators chat and email to the system users.
- Added new FAQ entries and configuration examples
- Made compression of page responses possible and controllable
- Made it possible to have a workflow return to a special address after finishing instead of allways returning to the mydesktop